@@ -7,7 +7,7 @@ Uploaders: Thomas Goirand <zigo@debian.org>,
            David Della Vecchia <ddv@canonical.com>,
 Build-Depends: debhelper (>= 9),
                dh-python,
-               openstack-pkg-tools,
+               openstack-pkg-tools (>= 52~),
                python-all,
                python-pbr (>= 1.8),
                python-setuptools,
@@ -63,8 +63,8 @@ Build-Depends-Indep: alembic (>= 0.8.4),
                      subunit,
                      testrepository,
 Standards-Version: 3.9.8
-Vcs-Browser: https://anonscm.debian.org/cgit/openstack/python-oslo.db.git/
-Vcs-Git: https://anonscm.debian.org/git/openstack/python-oslo.db.git
+Vcs-Browser: https://git.openstack.org/cgit/openstack/deb-python-oslo.db
+Vcs-Git: https://git.openstack.org/openstack/deb-python-oslo.db
 Homepage: https://launchpad.net/oslo
 
 Package: python-oslo.db
